# v6-multi-agent-ppm-platform

./: .env.demo  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ISSUES.md  CONTRIBUTING.md  INDEX.md  LICENSE  Makefile  PLANS.md  README.md  REPO_STRUCTURE.md  SECURITY.md  TREE.txt  docker-compose.test.yml  docker-compose.yml  email_validator.py  events.py  mkdocs.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pydantic_settings.py  pyproject.toml  replit.md  requirements-demo.txt  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  runtime_flags.py  start_web.py
.claude/hooks/: session-start.sh
.devcontainer/: Dockerfile  dev.env  devcontainer.json
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/issue_template/: documentation.md  feature_request.md  security_issue.md
.github/workflows/: README.md  cd.yml  ci.yml  connectors-live-smoke.yml  container-scan.yml  contract-tests.yml  dast-staging.yml  dependency-audit.yml  e2e-tests.yml  iac-scan.yml  license-compliance.yml  load-test-staging.yml  migration-check.yml  performance-smoke.yml  pr-labeler.yml  pr.yml  promotion.yml  release-gate.yml  release.yml  sbom.yml  secret-scan.yml  security-scan.yml  static.yml  storybook-visual-regression.yml
agents/: AGENT_CATALOG.md  README.md  __init__.py
agents/common/: __init__.py  connector_integration.py  health_recommendations.py  integration_services.py  metrics_catalog.py  scenario.py  web_search.py
agents/core-orchestration/: README.md
agents/delivery-management/: README.md
agents/operations-management/: README.md
agents/portfolio-management/: README.md
agents/runtime/: README.md  __init__.py  timeout_harness.py
apps/: README.md
apps/admin-console/: Dockerfile  README.md
apps/analytics-service/: Dockerfile  README.md  job_registry.py
apps/api-gateway/: Dockerfile  README.md
apps/connector-hub/: Dockerfile  README.md  sandbox_registry.py
apps/demo_streamlit/: app.py  validate_demo.py
apps/document-service/: Dockerfile  README.md  document_policy_config.py
apps/mobile/: App.tsx  README.md  app.json  jest.config.js  package.json
apps/orchestration-service/: Dockerfile  README.md
apps/prototype/: README.md  requirements.txt
apps/web/: Dockerfile  README.md  requirements.txt  streamlit_app.py
apps/workflow-engine/: Dockerfile  README.md  requirements.txt  workflow_registry.py
apps/workflow-service/: Dockerfile  README.md
artifacts/dependencies/: hygiene-summary.json
artifacts/docs/: staleness-report.json
artifacts/dr/: backup-summary.json  restore-drill.json
artifacts/incident/: summary.json
artifacts/maturity/: scorecard-latest.json
artifacts/observability/: slo-summary.json
artifacts/ops/: alert-quality.json  drift-summary.json
artifacts/performance/: capacity-summary.json  k6-summary.json
artifacts/release-gate/: quality-report-core.json
artifacts/security/: secret-scan-summary.json  vulnerability-summary.json
artifacts/tests/: coverage-summary.json
config/: README.md
config/abac/: rules.yaml
config/agent-23/: mapping_rules.yaml  pipelines.yaml  quality_thresholds.yaml  (+2 more)
configs/: README.md
connectors/: README.md
constraints/: py313.txt
data/: README.md  analytics_events.json  analytics_kpi_history.json  analytics_lineage.json  approval_notification_store.json  approval_store.json  financial_actuals.json  financial_forecasts.json  improvement_backlog.json  knowledge_management.db  portfolio_strategy_store.json  process_models.json  process_recommendations.json  quality_coverage_trends.json  resource_calendars.json  scope_baselines.db  scope_baselines.json  stakeholder_comms.db  sync_audit_events.json  sync_retry_queue.json  vendor_procurement_events.json  workflow_events.json
design-system/: README.md
docs/: CHANGELOG.md  README.md  REPO_STRUCTURE.md  UI.md  agents.md  change-management.md  compliance.md  data.md  demo-environment.md  design-system.md  dr-runbook.md  frontend-spa-migration.md  merge-conflict-troubleshooting.md  outbound_dependency_inventory.md  platform-commercials.md  platform-description.md  platform-userguide.md  proposed-enhancements.md  react-native-typescript-alignment.md  repo-structure.md  root-file-policy.md  runbooks.md  schema-compatibility-matrix.md  solution-index.md
docs_markdown/: INDEX.md
examples/: README.md  abac-evaluation.json  integration_demo.py  mcp_cross_system_demo.py  portfolio-intake-request.json
infra/: README.md
integrations/: __init__.py
jinja2/: __init__.py
jsonschema/: __init__.py
manifest/: MANIFEST.csv
numpy/: __init__.py
ops/: smoke_workspace_wiring.py
prompts/: README.md
scripts/: README.md  check-docs-migration-guard.py  check-links.py  check-migrations.py  check-placeholders.py  check-schema-example-updates.py  check-templates.py  connector-certification.py  db_backup.sh  export_audit_evidence.py  fix_docs_formatting.py  generate_demo_data.py  load_demo_data.py  quickstart_smoke.py  reset_demo_data.sh  rotate_secrets.sh  schema_tool.py  validate-examples.py  validate-github-workflows.py  validate-intent-routing.py  validate-policies.py  validate-schemas.py  verify_manifest.py
security/: __init__.py  config.py
services/: README.md  feedback_service.py
sqlalchemy/: README.md  __init__.py  exc.py
src/: README.md
tests/: README.md  conftest.py  test_api.py  test_approval_workflow.py  test_approval_workflow_agent.py  test_artifact_validation.py  test_backup_runbook.py  test_base_agent.py  test_data_quality_pipeline.py  test_data_quality_rules.py  test_event_contracts.py  test_feedback_prompt_flagging.py  test_intent_router.py  test_mcp_connector_exception_handling.py  test_operational_runbooks.py  test_schema_registry_tooling.py  test_schema_validation.py  test_security_review_fixes.py
tools/: README.md  __init__.py  agent_runner.py  agent_runner_core.py  component_runner.py  connector_runner.py  runtime_paths.py
(+9356 files in other folders)
